// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeBeforeOrEqualTo fails when given an earlier date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeBeforeOrEqualTo()</intensity>

Expected date to be before or equal to <red>2019-09-10T22:00:00.000Z</color> but received:
  <red>2019-09-01T22:00:00.000Z</color>"
`;

exports[`.not.toBeBeforeOrEqualTo fails when given an equal date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeBeforeOrEqualTo()</intensity>

Expected date to be before or equal to <red>2019-09-01T22:00:00.000Z</color> but received:
  <red>2019-09-01T22:00:00.000Z</color>"
`;

exports[`.toBeBeforeOrEqualTo fails when given a later date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeBeforeOrEqualTo()</intensity>

Expected date to be before or equal to <red>2019-09-01T22:00:00.000Z</color> but received:
  <red>2019-09-10T22:00:00.000Z</color>"
`;
